--- a/styles/style.css
+++ b/styles/style.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Comfortaa:wght@300..700&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Barlow:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&family=Comfortaa:wght@300..700&family=Great+Vibes&family=Open+Sans:ital,wght@0,300..800;1,300..800&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Prata&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Comic+Neue:ital,wght@0,300;0,400;0,700;1,300;1,400;1,700&family=Prata&display=swap'); 
+
 
 *{
     margin: 0;
@@ -12,7 +14,7 @@
     --fonte-primaria: "Open Sans", sans-serif;
     --fonte-secundaria: "Great Vibes", cursive;
     --fonte-terciaria: "Prata", serif;
-
+    --fonte-quaternaria: "Comic Neue", cursive;
 
     --cor-fonte-primaria: rgb(0, 0, 0);
     --cor-fonte-secundaria: white;
@@ -133,8 +135,13 @@ header{
         --bs-btn-disabled-border-color: #6c757d;
     }
 
+
     .card-text{
         font-family: var(--fonte-primaria);
+    }
+
+    #depoimentos .card-text{
+        font-family: var(--fonte-quaternaria);
     }
 
     #galeria .btn:hover{
@@ -143,11 +150,6 @@ header{
         transform: scale(1.1);
     }
 
-[data-bs-theme="light"]{
-
-    
-    
-}
 
 [data-bs-theme="dark"]{
 
